--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,19 @@
     android:orientation="horizontal"
     tools:context=".MainActivity">
 
-    <fragment
-        android:id="@+id/leftFrag"
-        android:name="com.flandre.android.fragment.LeftFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1" />
-
 <!--    <fragment-->
 <!--        android:id="@+id/leftFrag"-->
 <!--        android:name="com.flandre.android.fragment.LeftFragment"-->
-<!--        android:layout_width="0dp"-->
+<!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="match_parent"-->
 <!--        android:layout_weight="1" />-->
+
+    <!--    <fragment-->
+    <!--        android:id="@+id/leftFrag"-->
+    <!--        android:name="com.flandre.android.fragment.LeftFragment"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        android:layout_weight="1" />-->
 
     <FrameLayout
         android:id="@+id/rightLayout"
